--- a/Sovokv1.approj/configuration.json
+++ b/Sovokv1.approj/configuration.json
@@ -60,7 +60,7 @@
     //   "write_external_storage"
     //   "write_settings"
     //   "xperia"
-    "FEATURES": ["opengles2","portrait"],
+    "FEATURES": ["opengles2","portrait", "accelerometer" ],
 
     // Preferred way of handling URLs in the code.
     // Leave it null for most cases.
